[gd_scene load_steps=3 format=3 uid="uid://calesgjddxis8"]

[ext_resource type="Script" path="res://Scripts/MenuUI.gd" id="1_0m5iv"]
[ext_resource type="Texture2D" uid="uid://d2prrh61tcqel" path="res://Assets/intro.png" id="2_a05fw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m5iv")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_a05fw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -141.0
offset_right = 75.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Player1" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player2" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
